# heartfelt-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  test.yml
src/check_filenames/: _logging.py  check_filenames.py  check_mixed_case.py  check_whitespace.py
src/heartfelt_hooks/: _logging.py  check_heading_levels.py  check_hidden_notebooks.py  check_kernel.py  check_mixed_case.py  check_snake_case.py  check_whitespace.py  hide_cells.py  hide_solution_cells.py  list_headings.py
tests/: snake_case_test.py
